styles/logger.module.css
.container {
    width: 100%;
    max-height: 60svh;
    overflow-y: auto;
    padding-right: 1em;
    font-size: x-small;
    font-family: monospace;
    color: var(--theme-grey) !important; /* .text-muted */
}

@media screen and (min-width: 768px) {
    .container {
        max-height: 70svh;
    }

    .embedded {
        max-height: 25svh;
    }
}

.row {
    display: flex;
    gap: 0.5rem;
    font-family: monospace;
    color: var(--theme-grey) !important; /* .text-muted */
}

.row:hover {
    background-color: rgba(128, 128, 128, 0.1);
}

.timestamp {
    text-wrap: nowrap;
    min-width: 20px;
    text-align: right;
}

.level {
    font-weight: bold;
    text-transform: uppercase;
    min-width: 32px;
}

.tag {
    vertical-align: top;
    font-weight: bold;
}

